assets/scss/betterlinks.scss
@import './calendar/style';
@import './calendar/theme';
@import './common/fonts';
@import './common/variable';
@keyframes rotating {
	from {
		transform: rotate(0deg);
	}
	to {
		transform: rotate(360deg);
	}
}
.btl-rotating {
	animation: rotating 3s linear infinite;
}
.betterlinks-body {
	padding-top: 20px;
	padding-right: 20px;
	@import './common/reboot';
	@import './common/form';
	@import './components/topbar';
	@import './components/category';
	@import './components/link';
	@import './components/list-view';
	@import './components/analytics';
	@import './components/tab';
	@import './components/doc';
	@import './components/broken-links';
}
body {
	&.betterlinks-dark-mode {
		background: #36405a;
		.betterlinks-body {
			@import './control/plugin-mode';
		}
		@import './control/plugin-mode-modal';
		#wpfooter {
			color: $white;
			a {
				color: $success-lighten;
			}
		}
	}
	> .btl-overlay {
		position: fixed;
		top: 0;
		right: 0;
		bottom: 0;
		left: 0;
		background-color: #000;
		z-index: 99;
		opacity: 0.65;
	}
}
.btl-date-range-picker-wrap {
	position: fixed;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	z-index: 9999;
	display: flex;
	justify-content: center;
	text-align: center;
	padding: 50px;
	overflow-x: hidden;
	overflow-y: auto;
	.btl-date-range-picker {
		position: relative;
		display: inline-block;
		background: white;
		border-radius: 6px;
		margin: auto;
		.btn-date-range-close {
			position: absolute;
			top: 0;
			right: 0;
			z-index: 999;
			border: 0;
			background: transparent;
			outline: none;
			color: $secondary-lighten;
			padding: 5px 5px;
			cursor: pointer;
		}
		.rdrDateRangePickerWrapper .rdrInputRanges {
			display: none;
		}
	}
}
.btl-tooltip {
	position: relative;
	display: inline-block;
	line-height: 1;
	.btl-tooltiptext {
		visibility: hidden;
		width: 120px;
		background: linear-gradient(202deg, #2961ff 0%, #003be2 100%);
		font-size: 14px;
		color: #fff;
		text-align: center;
		border-radius: 6px;
		padding: 10px;
		position: absolute;
		z-index: 1;
		bottom: 150%;
		left: 50%;
		transform: translateX(-50%);
		&::after {
			content: '';
			position: absolute;
			top: 100%;
			left: 50%;
			margin-left: -5px;
			border-width: 5px;
			border-style: solid;
			border-color: #003be2 transparent transparent transparent;
		}
	}
	&:hover .btl-tooltiptext {
		visibility: visible;
	}
}
@import './components/modal';
@import './components/utm_builder';

// expire status circle styles starts

span.btl-expire-status-dot {
	height: 0;
	width: 0;
	border-radius: 50%;
	display: inline-block;
	padding: 5px;
}

.btl-expire-status-dot-parent .btl-tooltiptext {
	width: 90px;
	text-transform: capitalize;
}

.betterlinks-body .btl-list-view .rdt_Table .rdt_TableBody .rdt_TableRow .rdt_TableCell .dnd-link-button.btl-tooltip.btl-expire-status-dot-parent {
	margin: 0;
	padding: 0;
}

.betterlinks-body .dnd-link-button.btl-tooltip.btl-expire-status-dot-parent,
.betterlinks-body .btl-list-view .rdt_Table .rdt_TableBody .rdt_TableRow .rdt_TableCell .dnd-link-button.btl-tooltip.btl-expire-status-dot-parent {
	margin-right: 10px;
}

span.btl-expire-status-dot.publish {
	background-color: #0bb876;
}

span.btl-expire-status-dot.expired {
	background-color: #dc143c;
}

span.btl-expire-status-dot.scheduled {
	background-color: #1e90ff;
}

span.btl-expire-status-dot.draft {
	background-color: #f8e00b;
}

// expire status circle styles ends

// list view 'rows per page' select broken icon design fix start

#betterlinksbody .rdt_Pagination select[aria-label='Rows per page:'] {
	background-image: none;
}

#betterlinksbody .rdt_Pagination select[aria-label='Rows per page:'] + svg {
	top: 50%;
	transform: translateY(-50%);
}

// list view 'rows per page' select broken icon design fix end

// autolink keywords' 'keywords' input field's new extra label css start
label.extra_info_keywords {
	color: #777;
}

label.extra_info_keywords > input#keywords {
	margin-bottom: 5px;
}
// autolink keywords' 'keywords' input field's new extra label css end

// mark as favorite button tooltip css start
.btl-fav-link.btl-tooltip .btl-tooltiptext {
	width: 130px;
	z-index: 33333;
}
// mark as favorite button tooltip css ends

//

.btl-modal-select--full.btl-modal-select-need-pro-teaser .btl-react-select__menu-list > div:nth-child(4) {
	&:after {
		content: 'pro';
		background: linear-gradient(202deg, #2961ff 0%, #003be2 100%);
		color: #fff;
		border-radius: 2px;
		padding: 3px 6px;
		font-size: 10px;
		margin-left: 3px;
		line-height: 1;
		text-transform: uppercase;
		display: inline-flex;
		align-items: center;
		border-radius: 2px;
		transform: translateY(-10px);
	}
}

//

// external analytics teaser UI css start
.btl-external-analytics-container.teaser > form.form > .btl-role-item > label.btl-form-label {
	width: 45%;
}
// external analytics teaser UI css end

//
// react select design break fix: Disable Auto-link keywords for Post Types start
.betterlinks-body .btl-form-group.btl-general-tab-settings-react-select .btl-modal-select--full .btl-react-select__control {
	height: auto;
}
// react select design break fix: Disable Auto-link keywords for Post Types end
//

